# RWTH-Colors

./: .gitignore  LICENSE  README.md  androidstudio.xml
CSS/: rwth-colors.css
Inkscape/: rwth-colors.gpl
LaTeX/: rwthcolors.tex
Python/rwth-colors/: pyproject.toml
Python/rwth-colors/RWTHColors/: __init__.py  altair_theme.py  cm.py  utils.py
Python/rwth-colors/RWTHColors/colors/: colors.py
Python/rwth-colors/RWTHColors/mpl-styles/: rwth-dark.mplstyle  rwth-full.mplstyle  rwth.mplstyle
Python/rwth-colors/examples/: altair-example.ipynb  scienceplot-example.ipynb
Python/rwth-colors/tests/: test_cm.py  test_colors.py
draw.io/: config.json
