[tool.poetry]
name = "RWTHColors"
version = "0.2.8"
description = "Simple library that makes it easier to use RWTH CI colors in python projects"
authors = ["Philipp Simon Leibner <philipp.leibner@ifs.rwth-aachen.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ifs-rwth-aachen/RWTH-Colors"

classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research"
]

keywords = ["rwth", "aachen", "rwth aachen", "farbwelt"]

include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pytest = ">=7.4.2"
matplotlib = ">=3.5.3"
cycler = ">=0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
